[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlalchemy_manager"
version = "0.0.15"
authors = [
    { name = "Nazar Kaliuzhnyi", email = "kaluzghnyy@gmail.com" },
]
description = "A base manager class to handle CRUD on SQLAlchemy models."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sqlalchemy >= 1.4",
]
extra-dependencies = [
    "pydantic >= 1.10.9",
]

[project.urls]
"Homepage" = "https://github.com/nakeeon/SQLAlchemy-Manager"
